--- a/src/main/sass/base/_palette-ln.scss
+++ b/src/main/sass/base/_palette-ln.scss
@@ -132,3 +132,4 @@ $page-section-bg-color: $brand-gray4;
 $caret-legacy-color: $brand-gray2-lighter50;
 $polling-refresh-bg-color: $brand-gray;
 $tooltip-color: $white;
+$callout-heading-bg-color: $brand-gray;
