--- a/src/main/sass/components/_all.scss
+++ b/src/main/sass/components/_all.scss
@@ -28,8 +28,10 @@
 @import 'page';
 @import 'polling-checkmark';
 @import 'polling-refresh';
+@import 'price-slider';
 @import 'product-info';
 @import 'qty-picker';
+@import 'slider';
 @import 'split-content';
 @import 'srs';
 @import 'success-dialog';
